- made the delete group and refresh application button slightly smaller - gave the correct z-index to the active info-message container

--- a/src/sass/delete-group.sass
+++ b/src/sass/delete-group.sass
@@ -10,14 +10,14 @@
     padding: 5px
     border: 2px solid $tertiary-color
     cursor: pointer
-    width: 25px
-    height: 25px
+    width: 20px
+    height: 20px
     border-radius: 100%
     transition: .3s ease-in-out
     opacity: 0
     z-index: -1
     img
-      width: 17px
+      width: 13px
       height: auto
     &.show
         opacity: 1
