--- a/src/sass/refresh-application.sass
+++ b/src/sass/refresh-application.sass
@@ -1,7 +1,7 @@
 .MSSL
   .refresh-application
-    width: 25px
-    height: 25px
+    width: 20px
+    height: 20px
     padding: 5px
     border-radius: 100%
     display: flex
@@ -12,5 +12,5 @@
     cursor: pointer
     z-index: 2
     img
-      width: 25px
+      width: 100%
       height: auto
